# FLife

./: .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.rst  FLife Showcase.ipynb  LICENSE  Multiaxial_criteria_comparison.ipynb  Multiaxial_showcase.ipynb  README.rst  pyproject.toml  references.bib  requirements.dev.txt  requirements.txt  setup.py  sync_version.py
.github/workflows/: python-package.yml  release-and-publish-to-pypi.yml
FLife/: __init__.py  spectralData.py  tools.py
FLife/freq_domain/: __init__.py  alpha075.py  bands_method.py  dirlik.py  fu_cebon.py  gao_moan.py  huang_moan.py  jiao_moan.py  jun_park.py  lotsberg.py  low.py  low_2014.py  modified_fu_cebon.py  narrowband.py  ortiz_chen.py  park.py  petrucci_zuccarello.py  rice.py  sakai_okamura.py  single_moment.py  tovo_benasciutti.py  tovo_benasciutti1.py  tovo_benasciutti2.py  wirsching_light.py  zhao_baker.py  zhao_baker1.py  zhao_baker2.py
FLife/multiaxial/: __init__.py  cplane.py  criteria.py  eq_stress.py
FLife/time_domain/: __init__.py  rainflow.py
FLife/visualize/: visualize.py
data/: L_shape.vtk  Vibration fatigue by spectral methods - a review with open-source support.ipynb  comparison_PSD_multiaxial.npy  comparison_PSD_near_uniaxial.npy
docs/: requirements.txt
docs/source/: FLife.rst  code.rst  conf.py  getting_started.rst  index.rst  requirements.txt
examples/: complete_example.py  first_example.py  simple_example.py
tests/: multiaxial_test.py  test_basic.py  test_doc_examples.py  test_readme_examples.py
