[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "FLife"
version = "2.2.2"
license = "MIT"
description = "Vibration Fatigue by Spectral Methods."
readme = "README.rst"
keywords = [
    "vibration",
    "fatigue",
    "spectral methods",
    "structural dynamics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "fatpack",
    "rainflow",
    "pylint",
    "pytest",
    "lvm_read",
    "matplotlib",
    "pyExSi",
    "pyvista[all]",
    "pyvistaqt",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
]
maintainers = [
    { name = "Janko Slavič", email = "janko.slavic@fs.uni-lj.si" },
    { name = "Jaša Šonc", email = "jasa.sonc@fs.uni-lj.si" },
]
authors = [
    { name = "Aleš Zorman", email = "ales.zorman@fs.uni-lj.si" },
    { name = "Jaša Šonc", email = "jasa.sonc@fs.uni-lj.si" },
    { name = "Matjaž Mršnik", email = "matjaz.mrsnik@fs.uni-lj.si" },
    { name = "Janko Slavič", email = "janko.slavic@fs.uni-lj.si" },
]

[project.optional-dependencies]
dev = [
    "sphinx",
    "twine",
    "wheel",
    "build",
    "pytest",
    "sphinx-rtd-theme",
    "sphinx-copybutton",
]

[project.urls]
homepage = "https://github.com/ladisk/FLife"
documentation = "https://flife.readthedocs.io/en/latest/index.html"
source = "https://github.com/ladisk/FLife"

[tool.hatch.build.targets.sdist]
include = [
    "FLife/*",
]
